// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetForm Rendering Tests No data 1`] = `
<div
  className="container-md"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="justify-content-md-center align-items-md-center row row-cols-md-4"
    >
      <div
        className="col-md"
      >
        <div
          className="mb-3 form-floating"
        >
          <input
            aria-label="reps"
            className="form-control"
            id="floatingReps"
            onChange={[Function]}
            type="text"
            value=""
          />
          <label
            htmlFor="floatingReps"
          >
            Reps
          </label>
        </div>
      </div>
      <div
        className="col-md"
      >
        <div
          className="mb-3 form-floating"
        >
          <input
            aria-label="weight"
            className="form-control"
            id="floatingWeight"
            onChange={[Function]}
            type="text"
            value=""
          />
          <label
            htmlFor="floatingWeight"
          >
            Weight
          </label>
        </div>
      </div>
    </div>
    <button
      aria-label="setSubmit"
      className="float-end btn btn-outline-secondary"
      disabled={false}
      type="submit"
    >
      Add Set
    </button>
  </form>
</div>
`;

exports[`SetForm Rendering Tests With Data 1`] = `
<div
  className="container-md"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="justify-content-md-center align-items-md-center row row-cols-md-4"
    >
      <div
        className="col-md"
      >
        <div
          className="mb-3 form-floating"
        >
          <input
            aria-label="reps"
            className="form-control"
            id="floatingReps"
            onChange={[Function]}
            type="text"
            value="20"
          />
          <label
            htmlFor="floatingReps"
          >
            Reps
          </label>
        </div>
      </div>
      <div
        className="col-md"
      >
        <div
          className="mb-3 form-floating"
        >
          <input
            aria-label="weight"
            className="form-control"
            id="floatingWeight"
            onChange={[Function]}
            type="text"
            value="200"
          />
          <label
            htmlFor="floatingWeight"
          >
            Weight
          </label>
        </div>
      </div>
    </div>
    <button
      aria-label="setSubmit"
      className="float-end btn btn-outline-secondary"
      disabled={false}
      type="submit"
    >
      Add Set
    </button>
  </form>
</div>
`;
